Added insurance and addons to cart

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     
 
-    <body id="main" onload="loadMain(), makePackageLists(), makeAddonLists(), create_summary_list()" >
+    <body id="main" onload="loadVehicleInv()" >
         
         <br />
         <div id="header_progress">
