--- a/home.html
+++ b/home.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <title>Car Rental Site</title>
-        <link rel="stylesheet" href="./styles/style-landing.css">
-        <link rel="stylesheet" href="./styles/jquery-ui.css">
-    </head>
+<head>
+    <title>Car Rental Site</title>
+    <link rel="stylesheet" href="./styles/style-landing.css">
+    <link rel="stylesheet" href="./styles/jquery-ui.css">
 
     <!--Dependencies for Datepicker Widget-->
     <script src="./scripts/jquery-3.7.1.js"></script>
     <script src="./scripts/jquery-ui.js"></script>
 
+    <script src="scripts/VehicleInventory.js"></script>
+    <script src="scripts/Cart.js"></script>
+    <script src="scripts/Main.js"></script>
+
     <!--Function to call Datepicker from JQuery-->
     <script>
-        $( function() {
-            $( "#datepicker" ).datepicker();
-        } );
+        $(function () {
+            $("#datepicker").datepicker();
+        });
     </script>
 
-    <body>
+
+</head>
+
+
+    <body onload="loadHomePage()">
 
         <header>
             <div class="header-row">
@@ -47,12 +54,12 @@
                 </select>
 
                 <label for="pickup-date">Pickup Date:</label>
-                <input type="datetime-local" name="pickupdate" min="2024-11-29" max="2025-11-29" required>
+                <input onclick="setMaxDate()" id="start_date" type="date" name="pickupdate" min="2024-11-29" max="2025-11-29" required>
 
                 <label for="return-date">Return Date:</label>
-                <input type="datetime-local" name="returndate" min="2024-11-29" max="2025-11-29" required>
+                <input onclick="setMinDate()" id="end_date" type="date" name="returndate" min="2024-11-29" max="2025-11-29" required>
 
-                <a href="./index.html" target="_self">Find your perfect vehicle</a>
+                <a href="./index.html" target="_self" onclick="saveDates()">Find your perfect vehicle</a>
                 
             </form>
 
