--- a/index.html
+++ b/index.html
@@ -55,13 +55,25 @@
             
                             <label for="sedans"> 
                                 <input type="radio" id="sedan" name="vehicle_type_filters">
-                                sedans
+                                Sedans
                             </label>
                             
                             <label for="trucks"> 
                                 <input type="radio"  id="truck" name="vehicle_type_filters">    
-                                trucks
+                                Trucks
                             </label>
+
+                            <label for="mid_size_SUV"> 
+                                <input type="radio"  id="mid_size_SUV" name="vehicle_type_filters">    
+                                Mid Sized SUV
+                            </label>
+
+                            <label for="large_SUV"> 
+                                <input type="radio"  id="large_SUV" name="vehicle_type_filters">    
+                                Full Sized SUV
+                            </label>
+
+
                         </div>
                     </div>
                 </div>
@@ -138,6 +150,8 @@
 
         <script src="scripts/Sedan.js"></script>
         <script src="scripts/Truck.js"></script>
+        <script src="scripts/Mid_SUV.js"></script>
+        <script src="scripts/Full_SUV.js"></script>
 
         <script src="scripts/Vehicle.js"></script>
 
