Fixed checkout not loading new cars, added example code for inline declaration of cars

--- a/checkout.html
+++ b/checkout.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./styles/style-landing.css">
     <link rel="stylesheet" href="./styles/jquery-ui.css">
 
+    <script src="scripts/Full_SUV.js"></script>
+    <script src="scripts/Mid_SUV.js"></script>
     <script src="scripts/Sedan.js"></script>
     <script src="scripts/Truck.js"></script>
     <script src="scripts/Vehicle.js"></script>
@@ -43,7 +45,7 @@
 
         .desc {
             font-size: 12px;
-            font-style:normal;
+            font-style: normal;
         }
 
         .summary-bubble {
@@ -52,8 +54,9 @@
             width: 45%;
             word-break: break-word;
         }
-        .variable{
-            font-style:normal;
+
+        .variable {
+            font-style: normal;
         }
     </style>
 </head>
