made it impossible to go to next page without selecting stuff

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div id="total_value">
                     $0 per day
                 </div>
-                <a href="./checkout.html" target="_self">Find your perfect vehicle</a>
+                <button onclick="goToCheckout()">Find your perfect vehicle</button>
             </div>
 
 
