--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
             </ul>
 
         </form>
-        <a class="submit-button" href="./index.html" target="_self" onclick="saveDates()">Find your perfect vehicle</a>
+        <button class="submit-button" onclick="findVehicleButtion()">Find your perfect vehicle</button>
         
     </div>
     
