added survey still fucked

--- a/surveyindex.html
+++ b/surveyindex.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="survey-container" id="surveyContainer">
-    <button class="skip-button" onclick="skipSurvey()">Skip</button>
+    <button class="skip-button" onclick="skipSurvey()">Skip Survey</button>
 
     <div class="survey-step active" id="step-intro">
         <div class="intro-content">
@@ -17,6 +17,7 @@
             <p>Embark on a journey to find the perfect vehicle tailored to your needs. Let's get started!</p>
         </div>
         <button class="start-button" onclick="nextStep()">Start Survey</button>
+
     </div>
 
     <!-- Question 1 -->
