--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
                     <div id="vehicleDropdown" class="dropdown-content">
                         <div id="vehicle_type_filters">
 
-                            
-
-
+                        
                         </div>
                     </div>
                 </div>
@@ -63,7 +61,7 @@
                     </label>
                     </div>
                 </div>
-                <button onclick="applyFilters()" class="applyfiltersbtn" id="applyFiltersButton">Apply Filters</button>
+                <button  class="applyfiltersbtn" id="applyFiltersButton">Apply Filters</button>
             </div>
 
             <div id="vehicle_scroll">
