--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </div>
                 </div>
 
-                <button onclick="applyFilters()" class="applyfiltersbtn" id="applyFiltersButton">Apply Filters</button>
+                <button  class="applyfiltersbtn" id="applyFiltersButton">Apply Filters</button>
             </div>
 
             <div id="vehicle_scroll">
