--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                         </label>
                     </div>
                 </div>
-
+                
+                <button  class="resetfiltersbtn" id="resetFiltersButton">Reset Filters</button>
                 <button  class="applyfiltersbtn" id="applyFiltersButton">Apply Filters</button>
             </div>
 
