fixed low high filter bug

--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
     <div id="surveyModal" class="modal">
         <div class="survey-container" id="surveyContainer">
             <span class="close" onclick="closeSurvey()">&times;</span>
-            <button class="skip-button" onclick="window.location.href='index.html'">Skip Survey</button>
+            <button class="skip-button" onclick="skipSurvey()">Skip Survey</button>
     
             <div class="survey-step active" id="step-intro">
                 <div class="intro-content">
