--- a/home.html
+++ b/home.html
@@ -25,14 +25,14 @@
     <header>
         <div class="header-row">
             <a class="icon icon-header-logo" href="./home.html" target="_self"></a>
-            <a class="support-button" href="#">Support</a>
+            <a class="support-button" href="./wip.html">Support</a>
         </div>
     </header>
 
     <div class="navbar">
-        <a href="#">Home</a>
-        <a href="#">Our Vehicles</a>
-        <a href="#">About Us</a>
+        <a href="./home.html">Home</a>
+        <a href="./wip.html">Our Vehicles</a>
+        <a href="./wip.html">About Us</a>
     </div>
 
     <div class="locationdatetime_form">
@@ -215,7 +215,9 @@
         
         <div class="review-section">
             <h1>Have something to Say?</h1>
-            <button class="review-button">Write a Review</button>
+            <a href="./wip.html" target="_self">
+                <button class="review-button">Write a Review</button>
+            </a>
         </div>
         
     </div>
@@ -224,17 +226,17 @@
         <div class="footer-social">
             <ul class="footer-social_links">
                 <li>
-                    <a class="icon icon-footer-socials-circle" target="_blank" title="Instagram">
+                    <a class="icon icon-footer-socials-circle" href="./wip.html" target="_self" title="Instagram">
                         Instagram
                     </a>
                 </li>
                 <li>
-                    <a class="icon icon-footer-socials-circle" target="_blank" title="Twitter">
+                    <a class="icon icon-footer-socials-circle" href="./wip.html" target="_self" title="Twitter">
                         Twitter
                     </a>
                 </li>
                 <li>
-                    <a class="icon icon-footer-socials-circle" target="_blank" title="Facebook">
+                    <a class="icon icon-footer-socials-circle" href="./wip.html" target="_self" title="Facebook">
                         Facebook
                     </a>
                 </li>
