--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <header>
             <div class="header-row">
                 <a class="icon icon-header-logo" href="./home.html" target="_self"></a>
-                <a class="support-button" href="#">Support</a>
+                <a class="support-button" href="./wip.html">Support</a>
             </div>
         </header>
     
         <div class="navbar">
-            <a href="#">Home</a>
-            <a href="#">Our Vehicles</a>
-            <a href="#">About Us</a>
+            <a href="./home.html">Home</a>
+            <a href="./wip.html">Our Vehicles</a>
+            <a href="./wip.html">About Us</a>
         </div>
         <br />
         <div id="header_progress">
