--- a/thankyou.html
+++ b/thankyou.html
@@ -33,15 +33,15 @@
         <header>
             <div class="header-row">
                 <a class="icon icon-header-logo" href="./home.html" target="_self"></a>
-                <a class="support-button" href="#">Support</a>
+                <a class="support-button" href="./wip.html">Support</a>
             </div>
         </header>
 
         <!--stolen from home-->
         <div class="navbar">
-            <a href="#">Home</a>
-            <a href="#">Our Vehicles</a>
-            <a href="#">About Us</a>
+            <a href="./home.html">Home</a>
+            <a href="./wip.html">Our Vehicles</a>
+            <a href="./wip.html">About Us</a>
         </div>
 
         <div style="overflow:hidden">
@@ -58,17 +58,17 @@
             <div class="footer-social">
                 <ul class="footer-social_links">
                     <li>
-                        <a class="icon icon-footer-socials-circle" target="_blank" title="Instagram">
+                        <a class="icon icon-footer-socials-circle" href="./wip.html" target="_self" title="Instagram">
                             Instagram
                         </a>
                     </li>
                     <li>
-                        <a class="icon icon-footer-socials-circle" target="_blank" title="Twitter">
+                        <a class="icon icon-footer-socials-circle" href="./wip.html" target="_self" title="Twitter">
                             Twitter
                         </a>
                     </li>
                     <li>
-                        <a class="icon icon-footer-socials-circle" target="_blank" title="Facebook">
+                        <a class="icon icon-footer-socials-circle" href="./wip.html" target="_self" title="Facebook">
                             Facebook
                         </a>
                     </li>
