Made footer move no higher than bottom of page for WIP page

--- a/wip.html
+++ b/wip.html
@@ -3,7 +3,9 @@
 
 <head>
     <title>Feature Not Yet Implemented</title>
-    <link rel="stylesheet" href="./styles/style-landing.css">
+    <link rel="stylesheet" href="./styles/style-header.css">
+    <link rel="stylesheet" href="./styles/style-navbar.css">
+    <link rel="stylesheet" href="./styles/style-footer.css">
     <link rel="stylesheet" href="./styles/wip.css">
 </head>
 
