load from bottom on vehicle selection

--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
             
             
         </div>
+        <script>
+            window.scroll(0, document.documentElement.scrollHeight)
+        </script>
         <script src="scripts/ProgressBar.js" type="text/javascript"></script>
 
         <script src="scripts/Sedan.js"></script>
