--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div id="total_value">
                     $0 per day
                 </div>
-                <button onclick="goToCheckout()">Find your perfect vehicle</button>
+                <button class="checkout-button" onclick="goToCheckout()">Checkout</button>
             </div>
 
 
