Recolored survey to match website theme

--- a/surveyindex.html
+++ b/surveyindex.html
@@ -353,7 +353,7 @@
     <!-- Add other survey steps -->
 
     <div class="survey-step" id="step-complete">
-        <h1 style="color: #8b0000;">Thank You!</h1>
+        <h1 style="color: #e95555;">Thank You!</h1>
         <p>Your preferences have been recorded.</p>
         <button class="start-button" onclick="submitSurvey()">View Car Options</button>
     </div>
